// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux App Module Initial reducer state 1`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Redux Snapshot Thunk Actions retrySync 1`] = `
Array [
  Object {
    "type": "app/RETRY_SYNC",
  },
  Object {
    "meta": Object {
      "offline": Object {
        "commit": Object {
          "type": "user/GET_USER_COMMIT",
        },
        "effect": Object {
          "url": "<API_AUTH_MOCK>/user",
        },
        "rollback": Object {
          "type": "user/GET_USER_ROLLBACK",
        },
      },
    },
    "type": "user/GET_USER_REQUEST",
  },
]
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification 1`] = `
Array [
  Object {
    "type": "app/SHOW_CONNECTION_REQUIRED",
  },
]
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification full test 1`] = `
Array [
  Object {
    "type": "app/SHOW_CONNECTION_REQUIRED",
  },
]
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification full test 2`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification full test 3`] = `
Array [
  Object {
    "payload": true,
    "type": "app/SET_OFFLINE_MODE",
  },
]
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification full test 4`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": true,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification full test 5`] = `
Array [
  Object {
    "type": "app/SHOW_OFFLINE_MODE_IS_ON",
  },
]
`;

exports[`Redux App Module Redux Snapshot Thunk Actions showNotConnectedNotification full test 6`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": true,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Redux Snapshot Thunk Actions syncApp 1`] = `
Array [
  Object {
    "meta": Object {
      "offline": Object {
        "commit": Object {
          "type": "user/GET_USER_COMMIT",
        },
        "effect": Object {
          "url": "<API_AUTH_MOCK>/user",
        },
        "rollback": Object {
          "type": "user/GET_USER_ROLLBACK",
        },
      },
    },
    "type": "user/GET_USER_REQUEST",
  },
]
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setAppSynced 1`] = `
Object {
  "payload": true,
  "type": "app/SET_APP_SYNCED",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setAppSynced 2`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": true,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setAppSynced 3`] = `
Object {
  "payload": false,
  "type": "app/SET_APP_SYNCED",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setAppSynced 4`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setCoordinatesFormat 1`] = `
Object {
  "payload": "decimal",
  "type": "app/SET_COORDINATES_FORMAT",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setCoordinatesFormat 2`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setCoordinatesFormat 3`] = `
Object {
  "payload": "degrees",
  "type": "app/SET_COORDINATES_FORMAT",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setCoordinatesFormat 4`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "degrees",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setOfflineMode 1`] = `
Object {
  "payload": true,
  "type": "app/SET_OFFLINE_MODE",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setOfflineMode 2`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": true,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setOfflineMode 3`] = `
Object {
  "payload": false,
  "type": "app/SET_OFFLINE_MODE",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setOfflineMode 4`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setPristineCacheTooltip 1`] = `
Object {
  "payload": true,
  "type": "app/SET_PRISTINE_CACHE_TOOLTIP",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setPristineCacheTooltip 2`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setPristineCacheTooltip 3`] = `
Object {
  "payload": false,
  "type": "app/SET_PRISTINE_CACHE_TOOLTIP",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test setPristineCacheTooltip 4`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": false,
  "synced": false,
  "version": "2.0.0",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test updateApp 1`] = `
Object {
  "type": "app/UPDATE_APP",
}
`;

exports[`Redux App Module Simple Actions: snapshot and reducer test updateApp 2`] = `
Object {
  "areaCountryTooltipSeen": false,
  "areaDownloadTooltipSeen": false,
  "coordinatesFormat": "decimal",
  "hasSeenWelcomeScreen": false,
  "isUpdate": false,
  "language": "en",
  "mapWalkthroughSeen": false,
  "offlineMode": false,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "2.0.0",
}
`;
